[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ui/tilebox.gd" type="Script" id=2]

[node name="TileBox" type="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -100.0
margin_right = 250.0
grow_vertical = 0
rect_min_size = Vector2( 500, 100 )
script = ExtResource( 2 )
use_random = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TileContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 31.0
margin_top = 18.0
margin_right = 468.0
margin_bottom = 82.0
rect_min_size = Vector2( 437, 64 )
custom_constants/separation = 13

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/TileContainer"]
margin_right = 52.0
margin_bottom = 64.0

[node name="Button_DrawTile" type="Button" parent="CenterContainer/TileContainer/VBoxContainer"]
margin_right = 52.0
margin_bottom = 40.0
focus_mode = 0
size_flags_vertical = 3
enabled_focus_mode = 0
text = "DRAW"

[node name="Button_Erase" type="Button" parent="CenterContainer/TileContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 52.0
margin_bottom = 64.0
focus_mode = 0
enabled_focus_mode = 0
text = "ERASE"

[connection signal="pressed" from="CenterContainer/TileContainer/VBoxContainer/Button_DrawTile" to="." method="_on_Button_DrawTile_pressed"]
[connection signal="pressed" from="CenterContainer/TileContainer/VBoxContainer/Button_Erase" to="." method="_on_Button_Erase_pressed"]
